import classes.WorkSpace;
import exceptionClasses.SavePeopleException;

import java.io.IOException;

public class Main {

    public static void main(String[] args) throws IOException, SavePeopleException {
        new WorkSpace();



    }
}
