package classes;

import aclasses.ACommandTranslator;

public class CommandTranslator extends ACommandTranslator {
    public CommandTranslator() {
        super();
    }
}
