package classes;

import aclasses.AJsonParser;

import java.io.FileNotFoundException;

public class JsonParser extends AJsonParser{

    public JsonParser() throws FileNotFoundException {

    }


}
