package classes;

import aclasses.AQueueController;

public class QueueController extends AQueueController {


    public QueueController(JsonParser jsonParser) {
        super(jsonParser);
    }
}
