package classes;

import aclasses.ATerminal;

public class Terminal extends ATerminal {
    Terminal(){

    }
}
