package enums;

public enum Country {
    INDIA,
    VATICAN,
    NORTH_AMERICA,
    JAPAN;
}
