package enums;

public enum EyeColor {
    RED,
    BLUE,
    YELLOW;
}
