package enums;

public enum HairColor {
    GREEN,
    BLACK,
    PINK,
    YELLOW,
    ORANGE,
    WHITE;
}
