package interfaces;

public interface IQueueController {
    void showQueue();
}
