package interfaces;


public interface ITerminal {
    String readLine(String question);
}
