package interfaces;

public interface SLPeopleExceptions {
    void printErr();
}
