@startuml

title __LAB5's Class Diagram__\n

  namespace  {
    abstract class ACommandTranslator {
    }
  }
  

  namespace  {
    abstract class AJsonParser {
    }
  }
  

  namespace  {
    abstract class AQueueController {
    }
  }
  

  namespace  {
    abstract class ATerminal {
    }
  }
  

  namespace  {
    class Command {
    }
  }
  

  namespace  {
    class CommandTranslator {
    }
  }
  

  namespace  {
    class Controller {
    }
  }
  

  namespace  {
    class Coordinates {
    }
  }
  

  namespace  {
    enum Country {
    }
  }
  

  namespace  {
    enum EyeColor {
    }
  }
  

  namespace  {
    class FindPersonException {
    }
  }
  

  namespace  {
    enum HairColor {
    }
  }
  

  namespace  {
    class History {
    }
  }
  

  namespace  {
    interface ICommandTranslator {
    }
  }
  

  namespace  {
    interface IJsonParser {
    }
  }
  

  namespace  {
    interface IQueueController {
    }
  }
  

  namespace  {
    interface ITerminal {
    }
  }
  

  namespace  {
    class JsonParser {
    }
  }
  

  namespace  {
    class Location {
    }
  }
  

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    class Person {
    }
  }
  

  namespace  {
    class QueueController {
    }
  }
  

  namespace  {
    interface SLPeopleExceptions {
    }
  }
  

  namespace  {
    class SavePeopleException {
    }
  }
  

  namespace  {
    class Terminal {
    }
  }
  

  namespace  {
    class WorkSpace {
    }
  }
  

  ACommandTranslator .up.|> ICommandTranslator
  ACommandTranslator o-- SavePeopleException : SaveException
  AJsonParser .up.|> IJsonParser
  AJsonParser o-- SavePeopleException : SaveError
  AQueueController .up.|> IQueueController
  AQueueController o-- FindPersonException : findPersonException
  AQueueController o-- IJsonParser : parser
  ATerminal .up.|> ITerminal
  CommandTranslator -up-|> ACommandTranslator
  Controller o-- ICommandTranslator : commandTranslator
  Controller o-- SavePeopleException : e
  Controller o-- IJsonParser : jsonParser
  Controller o-- ITerminal : terminal
  FindPersonException .up.|> SLPeopleExceptions
  JsonParser -up-|> AJsonParser
  Person .up.|> java.lang.Comparable
  Person o-- Coordinates : coordinates
  Person o-- EyeColor : eyeColor
  Person o-- HairColor : hairColor
  Person o-- Location : location
  Person o-- Country : nationality
  QueueController -up-|> AQueueController
  SavePeopleException .up.|> SLPeopleExceptions
  Terminal -up-|> ATerminal


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
